(feat) add cosmos chain base
